crates/lutum/tests/ui/hook_def_aggregate_finalize.stderr
error: #[hook(...)] does not support using 'aggregate' and 'finalize' together
  --> tests/ui/hook_def_aggregate_finalize.rs:23:45
   |
23 |     #[hook(always, aggregate = JoinStrings, finalize = WrapResult)]
   |                                             ^^^^^^^^
